# pingo

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  pingo_dev_log.txt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  crypto.rs  db.rs  discovery.rs  file_server.rs  file_transfer.rs  lib.rs  main.rs  screen_capture.rs  signaling.rs  tray.rs
src/components/: Aside.jsx  ImageLightbox.jsx  NotificationCenter.jsx  Profile.jsx  ScreenshotCrop.jsx  UserAvatar.jsx
src/context/: AppContext.jsx
src/hooks/: useApp.js
src/lib/: api.js  avatarCache.js  avatarUtils.js  chatLogger.js  index.js  meeting_rtc_api.js  meeting_rtc_webrtc.js  notifications.js  screenShare.js  webrtc.js
src/pages/: chat.jsx  meetings.jsx  notes.jsx  settings.jsx
