[package]
name = "pingo"
version = "0.1.0"
description = "Pingo - P2P Desktop Messaging App"
authors = ["you"]
edition = "2021"

[lib]
name = "pingo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core Tauri
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# LAN Discovery
network-interface = "2"

# Encryption
aes-gcm = "0.10"
rand = "0.8"
x25519-dalek = { version = "2", features = ["static_secrets"] }
sha2 = "0.10"

# WebRTC signaling
uuid = { version = "1", features = ["v4"] }

# File handling
base64 = "0.22"

# Screen capture
scrap = "0.5"
image = "0.24"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Directories
dirs = "5"

# Hostname for auto-username
hostname = "0.4"

# Async channels
crossbeam-channel = "0.5"
socket2 = "0.6.2"

# HTTP client
reqwest = { version = "0.12", features = ["blocking"] }

# HTTP file server
tiny_http = "0.12"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true

